--- a/Resources/Prototypes/_CP14/Entities/Structures/Decorations/tombstones.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Decorations/tombstones.yml
@@ -48,3 +48,6 @@
               min: 1
               max: 2
   - type: Climbable
+  - type: Construction
+    graph: CP14BaseTombstone
+    node: CP14BaseTombstone
