--- a/Resources/Prototypes/_CP14/Entities/Structures/Doors/iron_doors_windowed.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Doors/iron_doors_windowed.yml
@@ -30,9 +30,9 @@
       behaviors:
       - !type:DoActsBehavior
         acts: ["Destruction"]
-  #- type: Construction
-  #  graph: CP14WoodenDoor
-  #  node: CP14WoodenDoor
+  - type: Construction
+    graph: CP14IronDoor
+    node: CP14IronDoor
 
 - type: entity
   id: CP14IronDoorWindowedMirrored
@@ -42,6 +42,6 @@
   - type: Door
     openSpriteState: open_mirrored
     closedSpriteState: closed_mirrored
-  #- type: Construction
-  #  graph: CP14WoodenDoor
-  #  node: CP14WoodenDoorMirrored
+  - type: Construction
+    graph: CP14IronDoor
+    node: CP14IronDoorMirrored
