--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/closets.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/closets.yml
@@ -3,28 +3,15 @@
   start: start
   graph:
     - node: start
-      actions:
-        - !type:DestroyEntity {}
-      edges:
-        - to: CP14WoodenClosetFrame
-          steps:
-            - material: CP14WoodenPlanks
-              amount: 2
-              doAfter: 2
-              
-    - node: CP14WoodenClosetFrame
-      entity: CP14WoodenClosetFrame
       edges:
         - to: CP14WoodenCloset
+          completed:
+            - !type:SnapToGrid
           steps:
             - material: CP14WoodenPlanks
-              amount: 2
-              doAfter: 2
+              amount: 4
             - material: CP14Nail
-              amount: 1
-              doAfter: 1
-            - tool: CP14Hammering
-              doAfter: 2
-              
+              amount: 2
+              doAfter: 4
     - node: CP14WoodenCloset
-      entity: CP14WoodenCloset
+      entity: CP14WoodenCloset 
