--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/coffins.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/coffins.yml
@@ -3,28 +3,17 @@
   start: start
   graph:
     - node: start
-      actions:
-        - !type:DestroyEntity {}
       edges:
-        - to: CP14CrateCoffinFrame
+        - to: CP14CrateCoffin
+          completed:
+            - !type:SnapToGrid
           steps:
             - material: CP14WoodenPlanks
               amount: 2
-              doAfter: 2
-              
-    - node: CP14CrateCoffinFrame
-      entity: CP14CrateCoffinFrame
-      edges:
-        - to: CP14CrateCoffin
-          steps:
             - material: CP14Cloth
               amount: 2
-              doAfter: 2
             - material: CP14Nail
               amount: 1
-              doAfter: 1
-            - tool: CP14Hammering
-              doAfter: 2
-              
+              doAfter: 4
     - node: CP14CrateCoffin
-      entity: CP14CrateCoffin
+      entity: CP14CrateCoffin 
