--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Misc/tombs.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Misc/tombs.yml
@@ -8,7 +8,7 @@
       edges:
         - to: CP14BaseTombstone
           steps:
-            - material: CP14StoneBlock
+            - material: CP14Stone
               amount: 5
               doAfter: 2
     - node: CP14BaseTombstone
