--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/cabinets.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/cabinets.yml
@@ -3,60 +3,33 @@
   start: start
   graph:
     - node: start
-      actions:
-        - !type:DestroyEntity {}
-      edges:
-        - to: CP14WoodenCabinetFrame
-          steps:
-            - material: CP14WoodenPlanks
-              amount: 2
-              doAfter: 2
-              
-    - node: CP14WoodenCabinetFrame
-      entity: CP14WoodenCabinetFrame
       edges:
         - to: CP14WoodenCabinet
+          completed:
+            - !type:SnapToGrid
           steps:
             - material: CP14WoodenPlanks
-              amount: 2
-              doAfter: 2
+              amount: 3
             - material: CP14Nail
-              amount: 1
-              doAfter: 1
-            - tool: CP14Hammering
-              doAfter: 2
-              
+              amount: 2
+              doAfter: 4
     - node: CP14WoodenCabinet
-      entity: CP14WoodenCabinet
-
+      entity: CP14WoodenCabinet 
 
 - type: constructionGraph
   id: CP14IronCabinet
   start: start
   graph:
     - node: start
-      actions:
-        - !type:DestroyEntity {}
-      edges:
-        - to: CP14IronCabinetFrame
-          steps:
-            - material: CP14IronBar
-              amount: 2
-              doAfter: 2
-              
-    - node: CP14IronCabinetFrame
-      entity: CP14IronCabinetFrame
       edges:
         - to: CP14IronCabinet
+          completed:
+            - !type:SnapToGrid
           steps:
             - material: CP14IronBar
-              amount: 2
-              doAfter: 2
+              amount: 3
             - material: CP14Nail
-              amount: 1
-              doAfter: 1
-            - tool: CP14Hammering
-              doAfter: 2
-              
+              amount: 2
+              doAfter: 4
     - node: CP14IronCabinet
       entity: CP14IronCabinet
