--- a/Resources/Prototypes/_CP14/Entities/Structures/Fence/iron_grille_top.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Fence/iron_grille_top.yml
@@ -48,3 +48,6 @@
         layer:
         - MidImpassable
         - HighImpassable
+  - type: Construction
+    graph: CP14FenceIronGrilleWindowStraight
+    node: CP14FenceIronGrilleWindowStraight
