--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/dye.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/dye.yml
@@ -24,6 +24,9 @@
     - state: base
     - state: powder
       color: "#bd2b26"
+  - type: Tag
+    tags:
+    - CP14DyeRed
 
 - type: entity
   id: CP14DyeYellow
@@ -35,6 +38,9 @@
     - state: base
     - state: powder
       color: "#ffe269"
+  - type: Tag
+    tags:
+    - CP14DyeYellow
 
 - type: entity
   id: CP14DyeBlue
@@ -46,6 +52,9 @@
     - state: base
     - state: powder
       color: "#5eabeb"
+  - type: Tag
+    tags:
+    - CP14DyeBlue
 
 - type: entity
   id: CP14DyeGreen
@@ -57,6 +66,9 @@
     - state: base
     - state: powder
       color: "#85903e"
+  - type: Tag
+    tags:
+    - CP14DyeGreen
 
 - type: entity
   id: CP14DyePurple
@@ -68,6 +80,9 @@
     - state: base
     - state: powder
       color: "#8241cc"
+  - type: Tag
+    tags:
+    - CP14DyePurple
 
 - type: entity
   id: CP14DyeBlack
@@ -79,3 +94,6 @@
     - state: base
     - state: powder
       color: "#242329"
+  - type: Tag
+    tags:
+    - CP14DyeBlack
