--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/bench.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/bench.yml
@@ -16,3 +16,6 @@
     - state: wooden
   - type: Physics
     bodyType: Static
+  - type: Construction
+    graph: CP14BenchWood
+    node: CP14BenchWood
