--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/seats.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Furniture/seats.yml
@@ -11,6 +11,21 @@
             - material: CP14WoodenPlanks
               amount: 4
               doAfter: 2
-              
     - node: CP14ChairWooden
       entity: CP14ChairWooden
+
+- type: constructionGraph
+  id: CP14BenchWood
+  start: start
+  graph:
+    - node: start
+      actions:
+        - !type:DestroyEntity {}
+      edges:
+        - to: CP14BenchWood
+          steps:
+            - material: CP14WoodenPlanks
+              amount: 5
+              doAfter: 2
+    - node: CP14BenchWood
+      entity: CP14BenchWood
