--- a/Resources/Prototypes/_CP14/Recipes/Construction/misc.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/misc.yml
@@ -33,3 +33,21 @@
   canBuildInImpassable: false
   conditions:
     - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden pallet
+  description: Wooden crates stand.
+  id: CP14WoodenPallet
+  graph: CP14WoodenPallet
+  startNode: start
+  targetNode: CP14WoodenPallet
+  category: construction-category-misc
+  icon:
+    sprite: _CP14/Structures/Furniture/pallets.rsi
+    state: wooden
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
