--- a/Resources/Prototypes/_CP14/Recipes/Construction/storage.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/storage.yml
@@ -156,7 +156,7 @@
   category: construction-category-storage
   icon:
     sprite: _CP14/Structures/Furniture/Barrels/barrel.rsi
-    state: barrel
+    state: icon
   objectType: Structure
   placementMode: PlaceFree
   canBuildInImpassable: false
