New construction recipes (#872)
* FilesSort

* NewCrafts

* Locale

* Doors&Tomb

* RemFrames&SmallFixes

* Grilles

* BarrelsBenchPalletCurtains

* EditLocale

* BarrelIconSprite

* Fix_ResDuplicates

* Res_Fix

---------

Co-authored-by: Ed <96445749+TheShuEd@users.noreply.github.com>

--- a/Resources/Prototypes/_CP14/Entities/Structures/Decorations/tombstones.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Decorations/tombstones.yml
@@ -46,5 +46,8 @@
           spawn:
             CP14StoneBlock1:
               min: 1
-              max: 2
+              max: 4
   - type: Climbable
+  - type: Construction
+    graph: CP14BaseTombstone
+    node: CP14BaseTombstone
