--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/closets.yml
@@ -97,7 +97,12 @@
         spawn:
           CP14WoodenPlanks1:
             min: 2
-            max: 5
+            max: 4
+  - type: Construction
+    graph: CP14WoodenCloset
+    node: CP14WoodenCloset
+    containers:
+    - entity_storage
 
 - type: entity
   name: safe
