--- a/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/shelfs.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/Graphs/Storage/shelfs.yml
@@ -1,31 +1,31 @@
 - type: constructionGraph
-  id: CP14Seat
+  id: CP14WallmountBarShelfA
   start: start
   graph:
     - node: start
       actions:
         - !type:DestroyEntity {}
       edges:
-        - to: CP14ChairWooden
+        - to: CP14WallmountBarShelfA
           steps:
             - material: CP14WoodenPlanks
-              amount: 4
+              amount: 2
               doAfter: 2
-    - node: CP14ChairWooden
-      entity: CP14ChairWooden
+    - node: CP14WallmountBarShelfA
+      entity: CP14WallmountBarShelfA
 
 - type: constructionGraph
-  id: CP14BenchWood
+  id: CP14WallmountBarShelfB
   start: start
   graph:
     - node: start
       actions:
         - !type:DestroyEntity {}
       edges:
-        - to: CP14BenchWood
+        - to: CP14WallmountBarShelfB
           steps:
             - material: CP14WoodenPlanks
-              amount: 5
+              amount: 2
               doAfter: 2
-    - node: CP14BenchWood
-      entity: CP14BenchWood
+    - node: CP14WallmountBarShelfB
+      entity: CP14WallmountBarShelfB
