--- a/Resources/Prototypes/_CP14/Recipes/Construction/storage.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Construction/storage.yml
@@ -1,12 +1,12 @@
 - type: construction
   crystallPunkAllowed: true
   name: Dirt pit
-  description: you're wasting dirt to create a hole. Makes sense, doesn't it? Can only be built on dirt tiles.
+  description: You're wasting dirt to create a hole. Makes sense, doesn't it? Can only be built on dirt tiles.
   id: CP14CrateDirtPitGrave
   graph: CP14CrateDirtPitGrave
   startNode: start
   targetNode: CP14CrateDirtPitGrave
-  category: construction-category-furniture
+  category: construction-category-storage
   icon:
     sprite: _CP14/Structures/Storage/dirt_pit.rsi
     state: open
@@ -18,3 +18,225 @@
     - !type:TileType
       targets:
         - CP14FloorDirt
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden chest
+  description: A simple wooden chest for easy storage of junk.
+  id: CP14WoodenChest
+  graph: CP14WoodenChest
+  startNode: start
+  targetNode: CP14WoodenChest
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Crates/woodenchest.rsi
+    state: icon
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden closet
+  description: A simple wooden wardrobe for storing clothes and other things.
+  id: CP14WoodenCloset
+  graph: CP14WoodenCloset
+  startNode: start
+  targetNode: CP14WoodenCloset
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Dressers/wood_cupboard.rsi
+    state: icon
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden cabinet
+  description: An ordinary wooden cabinet for simple knickknacks.
+  id: CP14WoodenCabinet
+  graph: CP14WoodenCabinet
+  startNode: start
+  targetNode: CP14WoodenCabinet
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Dressers/wood_cabinet.rsi
+    state: icon
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Iron cabinet
+  description: An ordinary iron cabinet for simple knickknacks.
+  id: CP14IronCabinet
+  graph: CP14IronCabinet
+  startNode: start
+  targetNode: CP14IronCabinet
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Dressers/iron_cabinet.rsi
+    state: icon
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Small wooden crate
+  description: A small wooden crate for storing everything.
+  id: CP14SmallWoodenCrate
+  graph: CP14SmallWoodenCrate
+  startNode: start
+  targetNode: CP14SmallWoodenCrate
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Crates/small_wooden_crate.rsi
+    state: icon
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Large wooden crate
+  description: A large wooden crate for storing a lot of things.
+  id: CP14LargeWoodenCrate
+  graph: CP14LargeWoodenCrate
+  startNode: start
+  targetNode: CP14LargeWoodenCrate
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Crates/large_wooden_crate.rsi
+    state: icon
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Coffin
+  description: A comfortable and nice looking coffin to comfortably await your resurrection.
+  id: CP14CrateCoffin
+  graph: CP14CrateCoffin
+  startNode: start
+  targetNode: CP14CrateCoffin
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Storage/Crates/coffin.rsi
+    state: base
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden barrel
+  description: The simplest design for storing liquids.
+  id: CP14BaseBarrel
+  graph: CP14BaseBarrel
+  startNode: start
+  targetNode: CP14BaseBarrel
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Furniture/Barrels/barrel.rsi
+    state: icon
+  objectType: Structure
+  placementMode: PlaceFree
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden crane barrel
+  description: Large lying barrel with tap, for storing valuable liquids.
+  id: CP14CraneBarrel
+  graph: CP14CraneBarrel
+  startNode: start
+  targetNode: CP14CraneBarrel
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Furniture/Barrels/crane_barrel.rsi
+    state: barrel
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canRotate: true
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Wooden small crane barrel
+  description: A small lying barrel with a tap to quickly pour liquid into mugs.
+  id: CP14CraneBarrelSmall
+  graph: CP14CraneBarrelSmall
+  startNode: start
+  targetNode: CP14CraneBarrelSmall
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Furniture/Barrels/crane_barrel_small.rsi
+    state: barrel
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canRotate: true
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Bar shelf (1)
+  description: Wall shelves to store your wine collection.
+  id: CP14WallmountBarShelfA
+  graph: CP14WallmountBarShelfA
+  startNode: start
+  targetNode: CP14WallmountBarShelfA
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Wallmount/wallmount_bar_shelf.rsi
+    state: shelf
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  canRotate: true
+  conditions:
+    - !type:TileNotBlocked
+    - !type:CP14WallRequired
+
+- type: construction
+  crystallPunkAllowed: true
+  name: Bar shelf (2)
+  description: Wall shelves to store your wine collection.
+  id: CP14WallmountBarShelfB
+  graph: CP14WallmountBarShelfB
+  startNode: start
+  targetNode: CP14WallmountBarShelfB
+  category: construction-category-storage
+  icon:
+    sprite: _CP14/Structures/Wallmount/wallmount_bar_shelf.rsi
+    state: shelf
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canBuildInImpassable: false
+  canRotate: true
+  conditions:
+    - !type:TileNotBlocked
+    - !type:CP14WallRequired
