--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/meat.yml
@@ -123,6 +123,9 @@
           sheepmeat_slice: ""
           sheepmeat_slice2: ""
           sheepmeat_slice3: ""
+  - type: Tag
+    tags:
+    - CP14RawMeatSlice
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
@@ -710,6 +713,9 @@
           Quantity: 1
         - ReagentId: Fat
           Quantity: 2
+  - type: Tag
+    tags:
+    - CP14RawMeatSlice
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
@@ -891,6 +897,9 @@
           Quantity: 1.5
         - ReagentId: Fat
           Quantity: 1.5
+  - type: Tag
+    tags:
+    - CP14RawMeatSlice
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
