--- a/Resources/Prototypes/_CP14/Recipes/Workbench/CookingTable/pies.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/CookingTable/pies.yml
@@ -21,9 +21,13 @@
     protoId: CP14PlatePie
   - !type:ProtoIdResource
     protoId: CP14FoodDoughMediumFlat
-  - !type:ProtoIdResource
-    protoId: CP14FoodMeatLambSlice
+  - !type:TagResource
+    tag: CP14RawMeatSlice
     count: 3
+    title: cp14-recipe-title-meat
+    texture:
+      sprite: _CP14/Objects/Consumable/Food/meat.rsi
+      state: different_meat_slice
   result: CP14FoodPieMeatRaw
 
 - type: CP14Recipe
