--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -69,22 +69,22 @@
 - type: loadout
   id: CP14ClothingOuterClothingBrownVest1
   equipment:
-    cloak: CP14ClothingOuterClothingBrownVest1
+    outerClothing: CP14ClothingOuterClothingBrownVest1
 
 - type: loadout
   id: CP14ClothingOuterClothingBrownVest2
   equipment:
-    cloak: CP14ClothingOuterClothingBrownVest2
+    outerClothing: CP14ClothingOuterClothingBrownVest2
 
 - type: loadout
   id: CP14ClothingOuterClothingBrownVest3
   equipment:
-    cloak: CP14ClothingOuterClothingBrownVest3
+    outerClothing: CP14ClothingOuterClothingBrownVest3
 
 - type: loadout
   id: CP14ClothingOuterClothingRedVest
   equipment:
-    cloak: CP14ClothingOuterClothingRedVest
+    outerClothing: CP14ClothingOuterClothingRedVest
 
 # Eyes
 
@@ -559,15 +559,8 @@
 
 - type: loadout
   id: CP14ClothingBeltQuiver
-  storage:
-    back:
-    - CP14ClothingBeltQuiver
-
-- type: loadout
-  id: CP14ClothingBeltBrown
-  storage:
-    back:
-    - CP14ClothingBeltBrown
+  equipment:
+    belt2: CP14ClothingBeltQuiver
 
 # Keys
 
