--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Sell/misc.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Sell/misc.yml
@@ -5,9 +5,7 @@
   icon: 
     sprite: _CP14/Objects/Materials/wood.rsi
     state: planks_3
-  price: 
-    min: 10
-    max: 30
+  price: 20
   service: !type:CP14SellStackService
     stackId: CP14WoodenPlanks
     count: 30
@@ -19,9 +17,7 @@
   icon: 
     sprite: _CP14/Objects/Materials/glass.rsi
     state: glass_3
-  price: 
-    min: 50
-    max: 250
+  price: 100
   service: !type:CP14SellStackService
     stackId: CP14GlassSheet
     count: 10
@@ -33,9 +29,7 @@
   icon: 
     sprite: _CP14/Objects/Flora/Wild/store_position.rsi
     state: sell
-  price: 
-    min: 30
-    max: 60
+  price: 50
   service: !type:CP14SellWhitelistService
     whitelist:
       tags: 
