--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/guildmaster.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/guildmaster.yml
@@ -25,7 +25,7 @@
 - type: loadout
   id: CP14ClothingOuterClothingGreenVest
   equipment:
-    cloak: CP14ClothingOuterClothingGreenVest
+    outerClothing: CP14ClothingOuterClothingGreenVest
 
 # Shirt
 
