--- a/Resources/Maps/_CP14/Ships/cargo_shuttle.yml
+++ b/Resources/Maps/_CP14/Ships/cargo_shuttle.yml
@@ -85,14 +85,6 @@ entities:
         chunkSize: 4
     - type: GasTileOverlay
     - type: RadiationGridResistance
-- proto: C14IronCabinetCargo
-  entities:
-  - uid: 55
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,-3.5
-      parent: 1
 - proto: CP14BlueBottle
   entities:
   - uid: 73
@@ -103,12 +95,6 @@ entities:
       parent: 1
 - proto: CP14ChairWooden
   entities:
-  - uid: 39
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.4904509,1.7075868
-      parent: 1
   - uid: 69
     components:
     - type: Transform
@@ -236,12 +222,13 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 1.0687864,6.6510777
       parent: 1
-- proto: CP14IronDoorBankStaff
+- proto: CP14IronCabinetCargo
   entities:
-  - uid: 50
+  - uid: 55
     components:
     - type: Transform
-      pos: 0.5,0.5
+      rot: 3.141592653589793 rad
+      pos: 0.5,-3.5
       parent: 1
 - proto: CP14OrangeBottle
   entities:
@@ -288,8 +275,6 @@ entities:
     - type: Transform
       pos: -1.5,-4.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 79
@@ -297,8 +282,6 @@ entities:
     - type: Transform
       pos: -1.5,-3.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 80
@@ -306,8 +289,6 @@ entities:
     - type: Transform
       pos: -1.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 81
@@ -315,8 +296,6 @@ entities:
     - type: Transform
       pos: -1.5,-1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 82
@@ -324,8 +303,6 @@ entities:
     - type: Transform
       pos: -1.5,-0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 83
@@ -333,8 +310,6 @@ entities:
     - type: Transform
       pos: -1.5,0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 84
@@ -342,8 +317,6 @@ entities:
     - type: Transform
       pos: -0.5,-4.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 85
@@ -351,8 +324,6 @@ entities:
     - type: Transform
       pos: -0.5,-3.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 86
@@ -360,8 +331,6 @@ entities:
     - type: Transform
       pos: -0.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 87
@@ -369,8 +338,6 @@ entities:
     - type: Transform
       pos: -0.5,-1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 88
@@ -378,8 +345,6 @@ entities:
     - type: Transform
       pos: -0.5,-0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 89
@@ -387,8 +352,6 @@ entities:
     - type: Transform
       pos: -0.5,0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 90
@@ -396,8 +359,6 @@ entities:
     - type: Transform
       pos: 0.5,-4.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 91
@@ -405,8 +366,6 @@ entities:
     - type: Transform
       pos: 0.5,-3.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 92
@@ -414,8 +373,6 @@ entities:
     - type: Transform
       pos: 0.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 93
@@ -423,8 +380,6 @@ entities:
     - type: Transform
       pos: 0.5,-1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 94
@@ -432,8 +387,6 @@ entities:
     - type: Transform
       pos: 0.5,-0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 95
@@ -441,8 +394,6 @@ entities:
     - type: Transform
       pos: 0.5,0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 96
@@ -450,8 +401,6 @@ entities:
     - type: Transform
       pos: 1.5,-4.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 97
@@ -459,8 +408,6 @@ entities:
     - type: Transform
       pos: 1.5,-3.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 98
@@ -468,8 +415,6 @@ entities:
     - type: Transform
       pos: 1.5,-1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 99
@@ -477,8 +422,6 @@ entities:
     - type: Transform
       pos: 1.5,-0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 100
@@ -486,8 +429,6 @@ entities:
     - type: Transform
       pos: 1.5,0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 101
@@ -495,8 +436,6 @@ entities:
     - type: Transform
       pos: 2.5,-4.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 102
@@ -504,8 +443,6 @@ entities:
     - type: Transform
       pos: 2.5,-3.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 103
@@ -513,8 +450,6 @@ entities:
     - type: Transform
       pos: 2.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 104
@@ -522,8 +457,6 @@ entities:
     - type: Transform
       pos: 2.5,-1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 105
@@ -531,8 +464,6 @@ entities:
     - type: Transform
       pos: 2.5,-0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 106
@@ -540,8 +471,6 @@ entities:
     - type: Transform
       pos: 1.5,-2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 107
@@ -549,8 +478,6 @@ entities:
     - type: Transform
       pos: 2.5,0.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 108
@@ -558,8 +485,6 @@ entities:
     - type: Transform
       pos: 1.5,1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 109
@@ -567,8 +492,6 @@ entities:
     - type: Transform
       pos: 0.5,1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 110
@@ -576,8 +499,6 @@ entities:
     - type: Transform
       pos: -0.5,1.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 111
@@ -585,8 +506,6 @@ entities:
     - type: Transform
       pos: 1.5,2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 112
@@ -594,8 +513,6 @@ entities:
     - type: Transform
       pos: 0.5,2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 113
@@ -603,8 +520,6 @@ entities:
     - type: Transform
       pos: -0.5,2.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
   - uid: 114
@@ -612,8 +527,6 @@ entities:
     - type: Transform
       pos: 0.5,3.5
       parent: 1
-    - type: Physics
-      canCollide: False
     - type: Fixtures
       fixtures: {}
 - proto: CP14ShuttleWingBigL
@@ -768,16 +681,6 @@ entities:
     - type: Transform
       pos: 2.5,-0.5
       parent: 1
-  - uid: 43
-    components:
-    - type: Transform
-      pos: -0.5,0.5
-      parent: 1
-  - uid: 44
-    components:
-    - type: Transform
-      pos: 1.5,0.5
-      parent: 1
 - proto: CP14WallmountFlagBankShip
   entities:
   - uid: 17
@@ -814,14 +717,6 @@ entities:
       fixtures: {}
 - proto: CP14WallmountLamp
   entities:
-  - uid: 57
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,1.5
-      parent: 1
-    - type: Fixtures
-      fixtures: {}
   - uid: 67
     components:
     - type: Transform
@@ -884,6 +779,11 @@ entities:
     - type: Transform
       pos: -0.5,-0.5
       parent: 1
+  - uid: 39
+    components:
+    - type: Transform
+      pos: -0.5,0.5
+      parent: 1
 - proto: CP14WoodenPalletSell
   entities:
   - uid: 2
@@ -905,5 +805,10 @@ entities:
     components:
     - type: Transform
       pos: 1.5,-1.5
+      parent: 1
+  - uid: 43
+    components:
+    - type: Transform
+      pos: 1.5,0.5
       parent: 1
 ...
