--- a/Resources/Prototypes/_CP14/Roles/Jobs/Traders/commandant.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Traders/commandant.yml
@@ -3,6 +3,7 @@
   name: cp14-job-name-commandant
   description: cp14-job-desc-commandant
   playTimeTracker: CP14JobCommandant
+  setPreference: false
   startingGear: CP14CommandantGear
   icon: "CP14JobIconCommandant"
   requireAdminNotify: true
