--- a/Resources/Prototypes/_CP14/Roles/Jobs/Traders/merchant.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Traders/merchant.yml
@@ -3,6 +3,7 @@
   name: cp14-job-name-merchant
   description: cp14-job-desc-merchant
   playTimeTracker: CP14JobMerchant
+  setPreference: false
   startingGear: CP14MerchantGear
   icon: "CP14JobIconMerchant"
   supervisors: cp14-job-supervisors-commandant
