--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
@@ -381,7 +381,7 @@
     size: Tiny
   - type: FlavorProfile
     flavors:
-      - pepper
+      - peppery
   - type: Sprite
     sprite: _CP14/Objects/Flora/Farm/pepper.rsi
     layers:
