--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/produce.yml
@@ -369,4 +369,71 @@
           Quantity: 2.5
         - ReagentId: Vitamin
           Quantity: 1
- 
+
+- type: entity
+  id: CP14FoodPepper
+  parent: FoodInjectableBase
+  categories: [ ForkFiltered ]
+  name: pepper
+  description: Red and sweetish.
+  components:
+  - type: Item
+    size: Tiny
+  - type: FlavorProfile
+    flavors:
+      - peppery
+  - type: Sprite
+    sprite: _CP14/Objects/Flora/Farm/pepper.rsi
+    layers:
+      - state: base1
+        map: [ "random" ]
+  - type: RandomSprite
+    available:
+      - random:
+          base1: ""
+          base2: ""
+          base3: ""
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 15
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 8
+        - ReagentId: Vitamin
+          Quantity: 6
+
+- type: entity
+  id: CP14FoodOnion
+  parent: FoodInjectableBase
+  categories: [ ForkFiltered ]
+  name: onion
+  description: If you eat too much, you can cry tears of joy.
+  components:
+  - type: Item
+    size: Tiny
+  - type: FlavorProfile
+    flavors:
+      - onion
+  - type: Sprite
+    sprite: _CP14/Objects/Flora/Farm/onion.rsi
+    layers:
+      - state: base1
+        map: [ "random" ]
+  - type: RandomSprite
+    available:
+      - random:
+          base1: ""
+          base2: ""
+          base3: ""
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 17
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 9
+        - ReagentId: Vitamin
+          Quantity: 4
+        - ReagentId: Allicin
+          Quantity: 3
